Closed Bug 29546 Opened 26 years ago Closed 25 years ago

Local Japanese folder with the name containing 0x5c chars can't be created correctly.

Categories

(MailNews Core :: Internationalization, defect, P3)

All
Windows 95
defect

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: ji, Assigned: scottputterman)

References

Details

Attachments

(1 file)

Build: 2000-02-28 When creating a new Japanese local folder, if the name contains 0x5c chars, the specified new folder is not created. Instead, a folder with the same name as the local folder is created. Steps of repro: 1. Highlight Local Folders and select File | New | Folder.. 2. Enter a japanese folder name containing 0x5c char, like hyouji. 3. Click on OK button You'll see under Local Folders, another Local Folders is created, not the Japanese one you entered.
Reassign to putterman@netscape.com. Set 29543 as depend.
Assignee: nhotta → putterman
Depends on: 29543
Status: NEW → ASSIGNED
Target Milestone: M16
Same results for subfolder under POP mail account.
Blocks: 14744
Target Milestone: M16 → M17
fix code is inclued in bug 29543.
QA contact to ji.
QA Contact: momoi → ji
fix for 29543 was checked in. My understanding that this is fixed. Marking fixed.
Status: ASSIGNED → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
Verified as fixed with Win32 2000050309 and Linux 2000050208 comm build.
Status: RESOLVED → VERIFIED
Did you see nhotta's comment in bug 29543? There may be some cases where 0x5c still has problems: ---- Additional Comments From nhotta@netscape.com 2000-05-01 17:21 ---- ... I was able to create japanese folders (including names with 0x5c). Rename also works fine. Although I occasionally saw "Unknown error" dialog for the folders which name contains 0x5c. This happened after I rename a folder and click the folder or a message thread. ...
I didn't see the error dialog when I recreate or rename a 0x5c folder. I used Japanese NT4. I'll check if the fix works properly on Japanese Win95.
** Observed with 5/3/2000 Win32 build ** There is still a remaining bug as described by nhotta and it occurs when renaming a folder wihch contains 0x5c character(s). Renaming folder names without 0x5c characters works OK. So I guess we should deal with the remaining problem in this bug. The other bug, Bug 33624 deals with general renaming. Here are the phenomena associated with this problem. 1. When you rename a folder which cotains 0x5c character in Shift_JIS, it looks as if the renaming has succeeded. The new name looks correct. 2. But you get an error when you try to display any message in it because that folder cannot be found -- and the message is not displayed. 3. Other operations such as copy/move into or out of the renamed folder created in step 1 also fails. 4. If you quit Mozilla, re-start and look at the local mail folder, you notice that the renamed folder was not completely renamed. For example, if your original name contains 0x5c in the first character, AB and you renamed it to CD, then even though in step 2 it looks like the name is changed to CD, after a re-start, you notice that the name is actually ACD. But now since the name is correctly displayed, you can display messages in it, copy/move msgs out of or into it. So there seem to be 2 problems: Problem 1: When the renaming a folder with 0x5c character, it is done incorrectly. It seems to append new name right after 0x5c rather than completely renaming it. So renaming is still using the incorrect path name logic for Japanese Windows. Problem 2: When you rename folders with 0x5c character, the "true incorrect" new name is not reflected immediately. This problem does not occur when the name does not contain 0x5c. This causes problems associated with display, copy/move of msgs.
Status: VERIFIED → REOPENED
Resolution: FIXED → ---
I know. This is nsFileSpec's bug.
I applied the patch and tested with momoi. I did not see the problem I mentioned in bug 29543.
m_kato's 5/4 patch looks good to me. nhotta, please check it in (r=ftang)
checked in the patch, thank you for your contribution.
Status: REOPENED → RESOLVED
Closed: 25 years ago25 years ago
Resolution: --- → FIXED
Target Milestone: M17 → M16
Verified with Win32 2000052209 comm build. Local Ja 0x5c folder can be created and renamed correctly.
Status: RESOLVED → VERIFIED
Product: MailNews → Core
Product: Core → MailNews Core
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: