Changed to use _mbsrchr instead of strrchr to support double-byte characters on PC (the change is ifdef for XP_PC), check in for m_kato@ga2.so-net.ne.jp, r=ftang, bug 29546.